# job_tracker

./: .env.example  .gitignore  .python-version  README.md  entrypoint.py  jd.txt  pyproject.toml  requirements.txt
classify/: llm.py  location_filter.py  rules.py  semantic.py
commands/: apply.py  auth.py  evaluate.py  generate_criteria.py  pdf.py  pipeline.py  profile_review.py  report.py  scan.py
data/: api-cost-config.yaml  cv.example.md  listings.csv  portals.example.yaml  profile.example.md  profile.example.yaml  scoring-criteria.example.yaml  scoring-tuning.example.yaml  scoring_criteria.example.yaml  scoring_tuning.example.yaml
injest/: job_boards.py
job_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
prompts/: apply_system.md  apply_user.md  criteria_system.md  criteria_user.md  llm_eval_system.md  llm_eval_user.md  render.py  report_system.md  report_user.md
providers/: __init__.py  anthropic_client.py  base.py  openai_client.py
templates/: cl-template.html  cv-template.html
tests/: test_gotfriends_ingester.py  test_location_filter.py  test_rybtech_ingester.py
